--- a/League/Views/Shared/_Layout.de.resx
+++ b/League/Views/Shared/_Layout.de.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Contact" xml:space="preserve">
+    <value>Kontakt</value>
+  </data>
   <data name="Legal Disclosure" xml:space="preserve">
     <value>Impressum</value>
   </data>
