Updated welcome page

--- a/League/Views/Home/Welcome.de.resx
+++ b/League/Views/Home/Welcome.de.resx
@@ -123,8 +123,8 @@
   <data name="Manual work takes too much from your leisure time?" xml:space="preserve">
     <value>Die manuelle Arbeit nimmt zu viel Freizeit in Anspruch?</value>
   </data>
-  <data name="Welcome" xml:space="preserve">
-    <value>Willkommen</value>
+  <data name="Volleyball League: Organization and Operation" xml:space="preserve">
+    <value>Volleyball-Liga: Organisation und Spielbetrieb</value>
   </data>
   <data name="You're organizing a volleyball league?" xml:space="preserve">
     <value>Du organisierst eine Volleyball-Liga?</value>
