Updated Titles in Home views

--- a/League/Views/Home/Welcome.de.resx
+++ b/League/Views/Home/Welcome.de.resx
@@ -123,8 +123,8 @@
   <data name="Manual work takes too much from your leisure time?" xml:space="preserve">
     <value>Die manuelle Arbeit nimmt zu viel Freizeit in Anspruch?</value>
   </data>
-  <data name="Volleyball League is a sports platform that brings everything necessary to organize and to run a league" xml:space="preserve">
-    <value>Volleyball-Liga ist eine Sportplattform, die alles Notwendige mitbringt, um eine Liga zu organisieren und den Spielbetrieb durchzuführen</value>
+  <data name="Volleyball League is an open source sports platform that brings everything necessary to organize and to run a league" xml:space="preserve">
+    <value>Volleyball-Liga ist eine Open-Source Sportplattform, die alles Notwendige mitbringt, um eine Liga zu organisieren und den Spielbetrieb durchzuführen</value>
   </data>
   <data name="Volleyball Leagues: Organization and Operation" xml:space="preserve">
     <value>Volleyball-Ligen: Organisation und Spielbetrieb</value>
