Ranking chart uses OxyPlot, no more dependency on System.Drawing.Common

--- a/League/Views/Ranking/Table.de.resx
+++ b/League/Views/Ranking/Table.de.resx
@@ -156,4 +156,7 @@
   <data name="until" xml:space="preserve">
     <value>bis</value>
   </data>
+  <data name="Ranking History" xml:space="preserve">
+    <value>Platzierungsverlauf</value>
+  </data>
 </root>
