--- a/LeagueDemo/Views/Home/Overview.de.resx
+++ b/LeagueDemo/Views/Home/Overview.de.resx
@@ -120,10 +120,10 @@
   <data name="Leagues" xml:space="preserve">
     <value>Ligen</value>
   </data>
-  <data name="Leagues using volleyball-liga.de" xml:space="preserve">
-    <value>Ligen auf volleyball-liga.de</value>
+  <data name="Leagues using volleyball-league.demo" xml:space="preserve">
+    <value>Ligen auf volleyball-league.demo</value>
   </data>
-  <data name="using volleyball-liga.de" xml:space="preserve">
-    <value>auf volleyball-liga.de</value>
+  <data name="using volleyball-league.demo" xml:space="preserve">
+    <value>auf volleyball-league.demo</value>
   </data>
 </root>
