--- a/League/Views/Team/Single.de.resx
+++ b/League/Views/Team/Single.de.resx
@@ -120,8 +120,8 @@
   <data name="Club" xml:space="preserve">
     <value>Verein</value>
   </data>
-  <data name="Contacts are only displayed to members of any team" xml:space="preserve">
-    <value>Kontakte werden nur Mitgliedern eines der Teams angezeigt</value>
+  <data name="Contacts are displayed only to signed-in users who are members of a team." xml:space="preserve">
+    <value>Kontakte werden nur angemeldeten Benutzern angezeigt, die Mitglied eines Teams sind.</value>
   </data>
   <data name="Direction" xml:space="preserve">
     <value>Anfahrt</value>
