--- a/League/Views/Shared/Components/VenueSelector/Default.de.resx
+++ b/League/Views/Shared/Components/VenueSelector/Default.de.resx
@@ -138,6 +138,9 @@
   <data name="Other venues" xml:space="preserve">
     <value>Andere Spielorte</value>
   </data>
+  <data name="Save" xml:space="preserve">
+    <value>Speichern</value>
+  </data>
   <data name="Team venues" xml:space="preserve">
     <value>Team Spielorte</value>
   </data>
