Enable null for team venue and home match day/time
Team.SelectVenue, TeamApplication.SelectVenue
* Change 'Not found' response to JsonResponseRedirect
* Change display message from TeamDataFailure to VenueSelectFailure

TeamApplication
* Call SignInManager.RefreshSignInAsync() after a user has registered a new team, so that it's immediately visible in Team.MyTeam
* Enable null for team venue and home match day/time
  * Add ApplicationSessionModel.TeamVenueSetKind to track "not set, no venue, existing venue, new venue"
  * Add TeamVenueValidator to validate selected venue types

TeamEditor component
* Add 'readonly' attribute to HTML element instead of 'disabled' for 'null' value

VenueSelector component
* Add 'Criteria.NotSpecified' if this is allowed in tenant specific 'TournamentContext'
* Include 'Criteria.NotSpecified' to selectable venue options

Team.MyTeam, Team.Single views
* Update display for venue, match day/time

--- a/League/Views/Shared/Components/VenueSelector/Default.de.resx
+++ b/League/Views/Shared/Components/VenueSelector/Default.de.resx
@@ -132,9 +132,6 @@
   <data name="No venues found at this time" xml:space="preserve">
     <value>Keine Spielorte gefunden</value>
   </data>
-  <data name="Not specified" xml:space="preserve">
-    <value>Nicht festgelegt</value>
-  </data>
   <data name="Other venues" xml:space="preserve">
     <value>Andere Spielorte</value>
   </data>
@@ -143,5 +140,8 @@
   </data>
   <data name="Team venues" xml:space="preserve">
     <value>Team Spielorte</value>
+  </data>
+  <data name="There is no venue assigned" xml:space="preserve">
+    <value>Kein Spielort zugeordnet</value>
   </data>
 </root>
