--- a/League/Views/Shared/Components/TeamEditor/Default.de.resx
+++ b/League/Views/Shared/Components/TeamEditor/Default.de.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Not specified" xml:space="preserve">
-    <value>Nicht bestimmt</value>
+    <value>Nicht festgelegt</value>
   </data>
   <data name="Please select a weekday" xml:space="preserve">
     <value>Bitte einen Wochentag auswählen</value>
