Adjust ReportSheet for <=3 and more number of sets

--- a/League/Views/Match/ReportSheet.de.resx
+++ b/League/Views/Match/ReportSheet.de.resx
@@ -154,7 +154,7 @@
     <value>Uhrzeit Beginn</value>
   </data>
   <data name="Team" xml:space="preserve">
-    <value>Mannschaft</value>
+    <value>Team</value>
   </data>
   <data name="Winner" xml:space="preserve">
     <value>Sieger</value>
