Flag overruled match results. Resolves #122
* Append superscript character "/" to match points
* Add text "Awarded points were adjusted manually" at the bottom of the list

--- a/League/Views/Match/Results.de.resx
+++ b/League/Views/Match/Results.de.resx
@@ -180,4 +180,8 @@
   <data name="unknown" xml:space="preserve">
     <value>offen</value>
   </data>
+  <data name="Awarded points were adjusted manually" xml:space="preserve">
+    <value>Die vergebenen Punkte wurden manuell angepasst</value>
+    <comment>Flag if result is overruled</comment>
+  </data>
 </root>
