--- a/TournamentManager/TournamentManager/ModelValidators/SetsValidatorResource.de.resx
+++ b/TournamentManager/TournamentManager/ModelValidators/SetsValidatorResource.de.resx
@@ -120,7 +120,7 @@
   <data name="AllSetsAreValid" xml:space="preserve">
     <value>Mindestens ein Satz ist fehlerhaft</value>
   </data>
-  <data name="BestOfMixAndMaxOfSetsPlayed" xml:space="preserve">
+  <data name="BestOfMinAndMaxOfSetsPlayed" xml:space="preserve">
     <value>{0} Gewinnsätze aus max. {1} Sätzen sind zu spielen</value>
   </data>
   <data name="BestOfNoMatchAfterBestOfReached" xml:space="preserve">
@@ -129,7 +129,7 @@
   <data name="BestOfRequiredTieBreakPlayed" xml:space="preserve">
     <value>Der letzte Satz (beste {0} von max. {1}) muss ein Tie-Break sein</value>
   </data>
-  <data name="MixAndMaxOfSetsPlayed" xml:space="preserve">
+  <data name="MinAndMaxOfSetsPlayed" xml:space="preserve">
     <value>Es müssen {0} Sätze gespielt sein</value>
   </data>
 </root>
