Implement overruling match results
* Add OverruleResultPolicy
* Add Match.OverruleResult controller action
* Update EnterResultViewModel
* Update notification email to reflect overruling
* Add ConfigureFacts to configure validator depending on default / overrule validation
* Add unit test for new validator methods

--- a/League/Templates/Email/Localization/EmailResource.de.resx
+++ b/League/Templates/Email/Localization/EmailResource.de.resx
@@ -233,6 +233,10 @@
     <value>Keine Nachricht enthalten</value>
     <comment>ContactForm</comment>
   </data>
+  <data name="No sets" xml:space="preserve">
+    <value>Keine Sätze</value>
+    <comment>ResultEntered</comment>
+  </data>
   <data name="Number of changes" xml:space="preserve">
     <value>Anzahl Änderungen</value>
     <comment>ResultEntered, ChangeFixture</comment>
