--- a/TournamentManager/TournamentManager/ModelValidators/MatchResultValidatorResource.de.resx
+++ b/TournamentManager/TournamentManager/ModelValidators/MatchResultValidatorResource.de.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MatchPointsAreValid" xml:space="preserve">
+    <value>Erlaubte Spielpunkte sind {0}</value>
+  </data>
   <data name="RealMatchDateEqualsFixture" xml:space="preserve">
     <value>Der tatsächliche Spieltag weicht vom Spielplan ab</value>
   </data>
