--- a/TournamentManager/TournamentManager/ModelValidators/MatchResultValidatorResource.resx
+++ b/TournamentManager/TournamentManager/ModelValidators/MatchResultValidatorResource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MatchPointsAreValid" xml:space="preserve">
+    <value>Allowed match points are {0}</value>
+  </data>
   <data name="RealMatchDateEqualsFixture" xml:space="preserve">
     <value>Actual match day differs from the fixture</value>
   </data>
