--- a/TournamentManager/TournamentManager/ModelValidators/SetsValidatorResource.resx
+++ b/TournamentManager/TournamentManager/ModelValidators/SetsValidatorResource.resx
@@ -120,7 +120,7 @@
   <data name="AllSetsAreValid" xml:space="preserve">
     <value>At least one set is invalid</value>
   </data>
-  <data name="BestOfMixAndMaxOfSetsPlayed" xml:space="preserve">
+  <data name="BestOfMinAndMaxOfSetsPlayed" xml:space="preserve">
     <value>Best {0} out of {1} sets must be played</value>
   </data>
   <data name="BestOfNoMatchAfterBestOfReached" xml:space="preserve">
@@ -129,7 +129,7 @@
   <data name="BestOfRequiredTieBreakPlayed" xml:space="preserve">
     <value>The last set (best {0} of max. {1}) must be a tie-break</value>
   </data>
-  <data name="MixAndMaxOfSetsPlayed" xml:space="preserve">
+  <data name="MinAndMaxOfSetsPlayed" xml:space="preserve">
     <value>{0} sets must be played</value>
   </data>
 </root>
